--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -9,4 +9,4 @@ spec:
     - port: 80          # port widoczny w klastrze
       targetPort: 7092  # port, na którym działa aplikacja
       nodePort: 30080   # port hosta Minikube (dostępny z zewnątrz)
-  type: NodePort
+  type: LoadBalancer
