--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: http-server-app
-          image: http-server-app:latest
+          image: http-server-app:v1.1759646147
           imagePullPolicy: Never
           # image: rreyfockandroid/http-server-app:latest  # 🔁 podaj tu swój obraz Dockerowy
           ports:
